fix z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -254,7 +254,6 @@ h2 {
   color: #3c454c;
   cursor: pointer;
   position: relative;
-  z-index: 2;
   transition: color 200ms ease-in;
   overflow: hidden;
 }
@@ -270,7 +269,6 @@ h2 {
   transform: translate(-50%, -50%) scale3d(1, 1, 1);
   transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
-  z-index: -1;
 }
 .inputGroup label:after {
   width: 32px;
@@ -282,7 +280,6 @@ h2 {
   background-repeat: no-repeat;
   background-position: 2px 3px;
   border-radius: 50%;
-  z-index: 2;
   position: absolute;
   right: 10px;
   top: 50%;
@@ -305,7 +302,6 @@ h2 {
   width: 32px;
   height: 32px;
   order: 1;
-  z-index: 2;
   position: absolute;
   right: 30px;
   top: 50%;
@@ -403,7 +399,6 @@ h2 {
 
 .product-card:hover{
   transform: scale(1.05);
-  z-index: 2;
   box-shadow: 2px 2px 2px #000;   
 }
 
@@ -871,7 +866,6 @@ nav ul li a:hover{
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  z-index: 1;
 }
 
 .basket {
